--- a/src/client/src/app/components/app/app.component.html
+++ b/src/client/src/app/components/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="wrapper">
+<div class="wrapper" [class.ticket-app]="this.awsCognito.isAuthenticate()">
     <router-outlet></router-outlet>
 </div>
