--- a/src/client/src/app/components/parts/header/header.component.html
+++ b/src/client/src/app/components/parts/header/header.component.html
@@ -1,3 +1,10 @@
+<header class="ticket-app-header">
+    <div class="close">
+        <a href="{{ environment.APP_SITE_URL }}/#/purchase">
+            閉じる
+        </a>
+    </div>
+</header>
 <header class="header clearfix">
     <div class="inner">
         <div class="logo">
