--- a/src/client/src/app/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.html
+++ b/src/client/src/app/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.html
@@ -5,7 +5,7 @@
                 <div class="large-text mb-x-small">
                     <strong>{{ data.startDate | timeFormat: data.coaInfo.dateJouei }}</strong>
                 </div>
-                <div>～{{ data.startDate | timeFormat: data.coaInfo.dateJouei }}</div>
+                <div>～{{ data.endDate | timeFormat: data.coaInfo.dateJouei }}</div>
             </div>
             <div class="text-center small-x-text status">
                 <div class="mb-x-small text">{{ availability.text }}</div>
