--- a/src/client/src/app/components/error/error.component.html
+++ b/src/client/src/app/components/error/error.component.html
@@ -10,5 +10,5 @@
                 <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
         </div>
     </div>
-    <code *ngIf="message">{{ message }}</code>
+    <code *ngIf="message && !environment.production">{{ message }}</code>
 </div>
