--- a/src/client/src/app/components/purchase/purchase-mvtk-input/purchase-mvtk-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-mvtk-input/purchase-mvtk-input.component.html
@@ -18,7 +18,7 @@
                                     placeholder="(例)012345789" maxlength="10">
                                 <div *ngIf="mvtkForm.controls['code'].invalid && mvtkForm.controls['code'].dirty">
                                     <div *ngIf="mvtkForm.controls['code'].errors.required" class="validation-text">ムビチケ購入番号が未入力です</div>
-                                    <div *ngIf="mvtkForm.controls['code'].errors.maxlength" class="validation-text">ムビチケ購入番号は{{ mvtkForm.controls['code'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls['code'].errors.maxlength" class="validation-text">ムビチケ購入番号は{{ mvtkForm.controls['code'].errors.maxlength.requiredLength }}文字で入力してください</div>
                                     <div *ngIf="mvtkForm.controls['code'].errors.minlength" class="validation-text">ムビチケ購入番号は{{ mvtkForm.controls['code'].errors.minlength.requiredLength }}文字で入力してください</div>
                                     <div *ngIf="mvtkForm.controls['code'].errors.pattern" class="validation-text">ムビチケ購入番号は数字で入力してください</div>
                                 </div>
@@ -33,8 +33,8 @@
                                     formControlName="password" autocomplete="off" placeholder="(例)0123" maxlength="4">
                                 <div *ngIf="mvtkForm.controls['password'].invalid && mvtkForm.controls['password'].dirty">
                                     <div *ngIf="mvtkForm.controls['password'].errors.required" class="validation-text">ムビチケ暗証番号が未入力です</div>
-                                    <div *ngIf="mvtkForm.controls['password'].errors.maxlength" class="validation-text">ムビチケ暗証番号は{{ mvtkForm.controls['password'].errors.maxlength.requiredLength }}文字以下で入力してください</div>
-                                    <div *ngIf="mvtkForm.controls['password'].errors.minlength" class="validation-text">ムビチケ暗証番号は{{ mvtkForm.controls['password'].errors.minlength.requiredLength }}文字以下で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls['password'].errors.maxlength" class="validation-text">ムビチケ暗証番号は{{ mvtkForm.controls['password'].errors.maxlength.requiredLength }}文字で入力してください</div>
+                                    <div *ngIf="mvtkForm.controls['password'].errors.minlength" class="validation-text">ムビチケ暗証番号は{{ mvtkForm.controls['password'].errors.minlength.requiredLength }}文字で入力してください</div>
                                     <div *ngIf="mvtkForm.controls['password'].errors.pattern" class="validation-text">ムビチケ暗証番号は数字で入力してください</div>
                                 </div>
                             </dd>
