--- a/src/client/src/app/components/purchase/purchase-overlap/purchase-overlap.component.html
+++ b/src/client/src/app/components/purchase/purchase-overlap/purchase-overlap.component.html
@@ -29,9 +29,9 @@
             </li>
         </ul>
         <p class="text-center mb-x-small">上記の仮予約内容で購入手続きへ戻ります。</p>
-        <div class="button prev-button blue-button">
-            <app-next-button (click)="returnTransaction()">仮予約の購入手続きへ戻る</app-next-button>
-        </div>
+        <form (ngSubmit)="returnTransaction()">
+            <app-next-button>仮予約の購入手続きへ戻る</app-next-button>
+        </form>
     </div>
 
     <div class="form-layout">
@@ -59,9 +59,9 @@
             </li>
         </ul>
         <p class="text-center  mb-x-small">仮予約を削除し、新しく選択した上映スケジュールの購入手続きを進めます。</p>
-        <div class="button next-button blue-button">
-            <app-next-button (click)="newTransaction()">仮予約を削除して次へ進む</app-next-button>
-        </div>
+        <form (ngSubmit)="newTransaction()">
+            <app-next-button>仮予約を削除して次へ進む</app-next-button>
+        </form>
     </div>
     <app-site-seal></app-site-seal>
 </div>
