--- a/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
+++ b/src/client/src/app/components/purchase/purchase-seat/purchase-seat.component.html
@@ -51,10 +51,12 @@
                 <button type="submit">
                     <app-icon iconName="next-white" width="15" height="15"></app-icon>次へ</button>
             </div>
-            <div class="prev-link">
-                <a class="ticket-app-hide" href="{{ purchase.data.movieTheaterOrganization?.url }}">
+            <div class="prev-link ticket-app-hide">
+                <a href="{{ purchase.data.movieTheaterOrganization?.url }}">
                     <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
-                <a class="ticket-app-show" href="{{ environment.APP_SITE_URL }}/#/purchase">
+            </div>
+            <div class="prev-link ticket-app-show">
+                <a href="{{ environment.APP_SITE_URL }}/#/purchase">
                     <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
             </div>
         </div>
